# Flask-Template

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: __init__.py
app/api/application/: data_service.py
app/api/domain/: model.py  repository.py
app/api/infra/: exceptions.py  routers.py  schema.py
app/api/infra/v1/: apiv1.py
app/api/presentation/: controller.py  validators.py
app/tests/: conftest.py  utils.py
app/tests/api/application/: test_data_service.py
app/tests/api/domain/: test_model.py  test_repository.py
app/tests/api/presentation/: test_controller.py  test_validators.py
config/: config.py  development.py  production.py  testing.py
database/: builk.py
database/initdb.d/: setup.sql
